# C_HW1

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/testy/: nearest_train.h  timetable.h
src/: main.c  nearest_train.c  timetable.c
test/: CMakeLists.txt  nearest_train.cpp  timetable.cpp
